# tpro2

./: pdf_problem.md  penis.md
tpro-master/: README.md  git_full.md  git_short.md  task0.md  task1.md  task2.md  task3.md  task4.md  task5.md  task6.md  task7.md  task8.md  task9.md  task_repo_prepare.md  task_vm_prepare.md
tpro-master/ddz/: README.md  battlecity.md  checkers.md  jumper.md  packiller.md  python.md  reversi.md  shooter.md  tron.md
tpro-master/ddz/game_sfml_example/: CMakeLists.txt  README.md
tpro-master/ddz/game_sfml_example/Arkanoid_chrono/: main.cpp
tpro-master/ddz/game_sfml_example/Arkanoid_clock/: Block.hpp  BlocksField.cpp  Game.cpp  GlobalObjects.cpp  GlobalObjects.hpp  Paddle.cpp  Paddle.hpp
tpro-master/ddz/game_sfml_example/Arkanoid_simple/: main.cpp
tpro-master/example/: .gitignore  CMakeLists.txt  example.cpp  example_tests.cpp
tpro-master/info/: Перечень вопросов к экзамену.md  Перечень вопросов к экзамену.rtf  Состояния_GIT.md
tpro-master/info/Библиотека/SFML/Example/Arkanoid_clock/: Ball.cpp  Ball.hpp  Block.cpp  BlocksField.hpp  Game.hpp  main.cpp
tpro-master/info/Библиотека/SFML/Example/Arkanoid_simple/: Arkanoid_simple.cpp
tpro-master/info/Библиотека/SFML/Example/Arkonoid_chrono/: Arkanoid_chrono.cpp
tpro-master/task4/: pro.md
tpro-master/task8/: README.md  func1_tests.txt  func2_test.txt  func3_tests.txt  requirements.cpp
